tests/invalid/Embedded_Functions/Negative_Factorial.vyp
int factorial(int n) {
    if (n < 2) {
        return 1;
    }
    return n * factorial(n - 1);
}

void main(void) {
    int result;
    result = factorial(-5);  // Factorial of negative number
    print("Factorial: ", result, "\n");
}
